examples/test/testpolicy8294.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy8294
  namespace: namespace60
spec:
  podSelector:
    matchLabels:
      key36: value5
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key46: value45
          key41: value32
      podSelector:
        matchLabels:
          key33: value49
          key48: value29
